--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
@@ -23,7 +24,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "^3.8.0",
+    "react-native-screens": "3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "yarn": "^1.22.17"
@@ -34,6 +35,7 @@
     "@types/react-native": "~0.63.2",
     "babel-jest": "^27.2.5",
     "jest": "^27.2.5",
+    "jest-expo": "^43.0.0",
     "react-test-renderer": "^17.0.2",
     "typescript": "~4.0.0"
   },
